Addressing comments about mixed data type handling in coalesce function implementation
Signed-off-by: Aaron Alvarez <aaarone@amazon.com>